--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bouncing Balls",
   "main": "build/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "tsc",
+    "test": "cd build && ../node_modules/mocha/bin/mocha"
   },
   "author": "Edmund King",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "ts-loader": "^0.8.2"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "mocha": "^2.5.3"
   }
 }
